# bob

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  INSTALL  INSTALL.md  INSTALL.txt  ISSUES  LICENSE  LICENSE.txt  MANIFEST.in  Portfile  README.md  README.rst  README.txt  TODO.txt  _config.yml  bootstrap.py  build.sh  buildout.cfg  changes.txt  conf.py  conf.py.in  debug.cfg  dox.sh  first.cfg  gdbpy.sh  gentags.sh  index.html  index.rst  layer0.cfg  layer1.cfg  layer2.cfg  makeall.csh  makeinclude.py  makeincludeh.csh  release.cfg  (+9 more)
benchmark/core/: CMakeLists.txt  tensor.cc
cxx/: CMakeLists.txt
cxx/core/: CMakeLists.txt
cxx/daq/: CMakeLists.txt
cxx/doc/: index.rst
cxx/io/: CMakeLists.txt
cxx/ip/: CMakeLists.txt
cxx/machine/: CMakeLists.txt
cxx/math/: CMakeLists.txt
cxx/trainer/: CMakeLists.txt
cxx/visioner/: CMakeLists.txt
examples/: CMakeLists.txt  README.txt
examples/boosting/: CMakeLists.txt  ConvertCascade.cc  HLBPboosttestintegral.cc  IntegraltrainCascade.cc  LBPtrainCascade.cc  Mcttrain.cc  README.txt  TODO.txt  bindata.list  boosting.cc  boostingLBPRound.cc  boostingintegral.cc  boosttest.cc  boosttestintegral.cc  parameter.data  parameter_haar.data  testBoostedClassifier.cc  trainHLBPCascade.cc  trainHLBPStump.cc  trainHaarCascade.cc  trainHaarStump.cc  trainLBPCascade.cc  trainLBPStump.cc
examples/dataset/: CMakeLists.txt  README.txt  bindata2tensor.cc  diskdataset.cc  imagescandataset.cc  largememorydataset.cc  makeWnds.cc  memorydataset.cc  readWnds.cc  readtensor.cc  seqdataset.cc  tensor2bindata.cc  tensor2image.cc  tensorCheckShort.cc  tensorSplitTrainingValidTest.cc  tensorfiles.cc
examples/distribution/: CMakeLists.txt  gmm.cc  gmmdev.cc  gmmforward.cc  run.csh
examples/facetools/: CMakeLists.txt  README  TODO.txt  cmu.list  eyenosechin_halfprofile.list  filelist.cc  frontalface19x19.geom.norm.cfg  frontalface64x80.geom.norm.cfg  geom.norm-64x80.cfg  gtimageextract.cc  gtvideoextract.cc  run.csh  runxy.csh  tensor2blocks.cc  tensor2dct.cc  xm2vts-small.list  xm2vts.list
examples/gradient/: CMakeLists.txt  README.csh  README.txt  TODO.txt  gradientmachines.cc  mlpclassification.cc  mlpforward1.cc  mlpforward2.cc  test.list  train.list  xor.cc
examples/images/: CMakeLists.txt  README.txt  imageformats.cc
examples/ip/: .directory  CMakeLists.txt  README.txt  blocks.cc  crop.cc  dct1d.cc  dct2d.cc  diffusionVcycle.cc  diffusionVcycleTensor.cc  fft.cc  fft1d.cc  fft2d.cc  frontalface19x19.geom.norm.cfg  frontalface64x80.geom.norm.cfg  geom.norm-19x19-inplane45.cfg  geom.norm.cfg  geomNorm.cc  histo.cc  histoEqual.cc  histoEqualTensor.cc  iimage.cc  ipflipper2d.cc  ipflipper3d.cc  lbp.cc  make.csh  memtest.cc  multiscaleRetinex.cc  multiscaleRetinexTensor.cc  relaxation.cc  relaxationTensor.cc  rotate.cc  scale.cc  selfQuotientImage.cc  selfQuotientImageTensor.cc  shift.cc  smoothGaussian.cc  sobel.cc  tanTriggs.cc  tanTriggsTensor.cc
examples/machines/: CMakeLists.txt  README.txt  convert3pyramidto5tree.cc  convert3to5models.cc  run_convert.sh  test19x19models.cc  trainFLDA.cc  trainLR.cc  treetest19x19models.cc
examples/options/: CMakeLists.txt  README.txt  cmdfileTest.cc  options.cc  parameters.cc
examples/scanning/: CMakeLists.txt  facefinder.pyramid.params  mv-facefinder.pyramid.params  pyramidScanning.cc  scanning.cc  testPatternList.cc  test_scanning_all.sh  test_scanning_one.sh
examples/sp/: dct1d.cc  dct2d.cc  fft1d.cc  fft2d.cc
examples/tensors/: CMakeLists.txt  README.txt  THTensor.cc  THTensorC.c  bigtest.cc  make.csh
examples/video/: CMakeLists.txt  checkvideo.cc  checkvideos.cc  ctxtracking.sh  facefinder.context.params  facefinder.multiscale.params  facefinder.track.context.params  fctxtrackingVideo.cc  fdvideo.cc  makeFaceFinder.cc  makeFaceFinders.sh  mv-facefinder.multiscale.params  testio.cc
extras/: CMakeLists.txt  Directories.cmake  SystemBoostConfig.cmake  boostConfig.cmake  build.sh  cblasConfig.cmake  ffmpegConfig.cmake  jpegConfig.cmake  mrproper.sh  pythonConfig.cmake
extras/ffmpeg/: CMakeLists.txt  clean.csh  makeffmpeg.csh  svncheck.csh
extras/jpeg/: CMakeLists.txt  jdmarker.c
extras/lbfgs/: CMakeLists.txt  arithmetic_ansi.h  arithmetic_sse_double.h  lbfgs.c  makelbfgs.csh
extras/oourafft/: CMakeLists.txt
python/: CMakeLists.txt  MANIFEST.in  README.rst  bob.egg-info.in  empty.c  setup.py  setup.py.in
python/bob/: __init__.py  build.py.in  helper.py
python/core/: CMakeLists.txt
python/daq/: CMakeLists.txt
python/db/: CMakeLists.txt
python/doc/: .gitignore  CMakeLists.txt  CodeBaseOverview.rst  Community.rst  Compilation.rst  Contributing.rst  CxxCoreErrorReporting.rst  CxxCoreUsingBlitzArrays.rst  CxxDevelopment.rst  CxxReference.rst  Dependencies.rst  Development.rst  GuidelinesCxxDevelopment.rst  History.rst  Installation.rst  IntroCxxDevelopment.rst  IrisExample.rst  Licensing.rst  Motivation.rst  Optimizing.rst  OrganizeYourCode.rst  Overview.rst  PythonBindingsDevelopment.rst  PythonDevelopment.rst  PythonIntroduction.rst  TicketReporting.rst  TicketReportingDev.rst  TutorialsAP.rst  TutorialsArrays.rst  TutorialsDatabase.rst  TutorialsIO.rst  TutorialsIP.rst  TutorialsIntro.rst  TutorialsMachine.rst  TutorialsPerformance.rst  TutorialsTrainer.rst  UsingVideos.rst  conf.py  index.rst  links.rst
python/docs/: Contributing.rst  CxxCoreUsingBlitzArrays.rst  CxxReference.rst  GuidelinesCxxDevelopment.rst  Optimizing.rst  OrganizeYourCode.rst  SuppressBuildbotWarnings.txt  TutorialsArrays.rst  TutorialsMachine.rst  conf.py  index.rst
python/extras/: build_ext_mp.py  buildout.cfg
python/face_verification/: CMakeLists.txt
python/integration/: CMakeLists.txt
python/io/: CMakeLists.txt
python/ip/: CMakeLists.txt
python/lib/: __init__.py  build.py  build.py.in
python/machine/: CMakeLists.txt
python/math/: CMakeLists.txt
python/scripts/: fdvideo.py  (+4 more)
src/: BobGNUInstallDirs.cmake  CMakeLists.txt  InstallParts.cmake  SetupPackage.cmake  blitz.cmake  boost.cmake  libsvm.cmake  macros.cmake  python.cmake  torchConfig.cmake
(+5533 files in other folders)
